# dafd-website

./: .gitignore  InterResults.csv  README.md  app.py  app_local.py  config.py  environment.yml  pyproject.toml  req2.txt  requirements.txt  stability_plots_test.py  wsgi.py
Ali_work/: FF1_RPMI_Dropception.csv  FF1_RPMI_Dropception.xlsx  FF1_lit.csv  FF1_lit.xlsx  NewFF1_Ali_dropception_capillary_reduced7_pruned15.csv  NewFF1_Ali_dropception_capillary_reduced7_pruned15.xlsx  NewFF2_Ali_dropception_capillary_reduced7_pruned15.csv  NewFF2_Ali_dropception_capillary_reduced7_pruned15.xlsx
Ali_work/Code/: XGBoost_gloval_stability.py  neural_networks_global_stability.py
app/: __init__.py
app/mod_NN/: controllers.py  models.py  views.py
app/mod_dafd/: DAFD_CMD.py  InterResults.csv  cmd_inputs.txt
app/mod_dafd/core_logic/: ForwardModel.py  ForwardModel3.py  InterModel.py  InterModel3.py  InterModel3_DE.py  InterModelQM.py  RegimeClassifier.py  Regressor.py
app/static/css/: slider.css  (+1 more)
app/templates/: analysis-transfer.html  analysis.html  backward.html  backward_1.html  backward_2.html  backward_3.html  backward_3_de.html  collaborate.html  datasets.html  download.html  droplet-based.html  fluid_properties.html  forward.html  forward_1.html  forward_2.html  forward_3.html  forward_3_de.html  home.html  index.html  index_1.html  index_2.html  index_3.html  information.html  initial-learning.html  layout.html  low-cost.html  no_solution.html  publications.html  result.html  single-cell.html  team.html  tolerance.html  transfer-learning.html  tutorial.html  uDrop.html
(+54 files in other folders)
