[tool.poetry]
name = "dafd-website"
version = "0.1.0"
description = ""
authors = ["David McIntyre"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.50.0"
scipy = "^1.5.2"
sklearn = "^0.0"
tensorflow = "^2.3.1"
matplotlib = "^3.3.2"
SALib = "^1.3.11"
keras = "^2.4.3"
seaborn = "^0.11.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
